recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
j = 0;
while (steps != 0)
{
avance(j+increment);
gauche(angle);
spiral(steps-1, angle, length+increment, increment)
}
}